tests/cases/parser/constructs/missing_comma_in_struct_field.stderr
error: unexpectedly encountered the identifier `age`
 --> $DIR/missing_comma_in_struct_field.hash:6:5
5 |       has_brother = true // <--- Error should be reported here since there is no comma....
6 |       age = 12, 
  |       ^^^ 
7 |       gender = false
  = help: expected a `,`
