tests/cases/parser/constructs/missing_comma_in_struct_field.hash
// run=fail, stage=parse

viktor := Dog(
    name = "Viktor",
    has_brother = true // <--- Error should be reported here since there is no comma....
    age = 12, 
    gender = false
)
